raffia/tests/error/scss/at-rule/include/missing-parens.snap
---
source: raffia/tests/error.rs
---
error: expect token `(`, but `$var` received
  ┌─ missing-parens.scss:1:22
  │
1 │ @include mixin using $arg1 {}
  │                      ^^^^^


